Fix thin gap at bottom of footer

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -106,7 +106,7 @@ section > .container {
 
 .hero {
     position: relative;
-    margin-top: 85px;
+    margin-top: 85.59px;
 }
 
 .hero:before {
